--- a/index.html
+++ b/index.html
@@ -1,14 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="img/bored-icon.png" type="image/x-icon">
-    <link rel="stylesheet" href="css/style.css">
-    <title>Bored app</title>
-</head>
-<body>
-    <h1>holle</h1>
-    <script src="js/index.js"></script>
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link
+            rel="shortcut icon"
+            href="img/bored-icon.png"
+            type="image/x-icon"
+        />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap"
+            rel="stylesheet"
+        />
+        <link rel="stylesheet" href="css/style.css" />
+        <title>Bored app</title>
+    </head>
+    <body>
+        <div class="bored-app">
+            <h1 id="title" class="title">🤔 Стало скучно?</h1>
+            <h2 id="subtitle" class="subtitle">Найти, чем заняться</h2>
+            <button id="getIdeaBtn" class="get-idea-btn">Go!</button>
+        </div>
+        <script src="js/index.js"></script>
+    </body>
 </html>
